# mcpb

./: Cargo.toml  README.md
.github/workflows/: ci.yml
src/: browser.rs  cli.rs  discovery.rs  main.rs
tests/: open_command.rs
